<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BloodPro_4_0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo_description">Logo</string>
    <string name="unconnect_description">Tap to connect</string>
    <string name="action_1_description">First action</string>
    <string name="action_2_description">Second action</string>
    <string name="action_3_description">Third action</string>
    <string name="begin_detect">开始检测</string>
    <string name="blood_pressure_check">血压检测</string>
    <string name="look_for_history">查看历史数据</string>
    <string name="blood_pressure_value">000</string>
    <string name="last_detect_time">最近检测 昨天：18:25</string>
    <string name="heart_rate">心率</string>
    <string name="heart_rate_value">0/bmp</string>
    <string name="systolic">收缩压</string>
    <string name="systolic_value">0/mmHg</string>
    <string name="diastolic">舒张压</string>
    <string name="diastolic_value">0/mmhg</string>
    <string name="detect_again">重新检测</string>
    
    <string name="found_device">发现设备</string>
    <string name="not_found_device">木有发现设备</string>
    <string name="button_scan">搜索设备</string>
    
    <!-- Remind -->
    <string name="remind_ble_must_open">必须打开蓝牙才能继续操作</string>
    <string name="remind_device_not_support">您的设备不支持蓝牙4.0</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="scanning_now">正在扫描中。。。</string>
    <string name="ask_when_exit">再按一次退出程序</string>
    <string name="connect_device_first">请选择设备进行连接</string>
    <string name="connect_broken">连接已经断开，请重新连接</string>
    <string name="connect_success">连接成功</string>
    <string name="connecting_now">正在连接中，请耐心等待</string>
    <string name="no_history_data">还未进行过测量，没有数据</string>
    <string name="connect_timeout">连接超时，请重试</string>
    <string name="scan_failed">扫描失败，检查设备是否开启</string>
    <string name="connect_failed">连接失败</string>
    <string name="scan_and_connect">开始扫描并连接，请等待。。。</string>
    
    <string name="blood_cartogram">血压统计图</string>
    <string name="idea_level">理想血压</string>
    <string name="normal_level">正常血压</string>
    <string name="before_high_pressure">高血压前期</string>
    <string name="high_pressure">高血压</string>
    <string name="low_pressure">低血压</string>
    <string name="pre_high_pressure">临界高血压</string>
</resources>
