<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ProgressWheel="http://schemas.android.com/apk/res/com.wm.bloodpro_4_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_bg_color"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo" />

            <ImageView
                android:id="@+id/img_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/unconnect_description" />
            
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_tool_bar"
        android:layout_marginTop="20dp" >

        <com.wm.tools.ProgressWheel
            android:id="@+id/progress_bar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            ProgressWheel:barColor="@color/wheel_bar_color"
            ProgressWheel:barLength="20dp"
            ProgressWheel:barWidth="20dp"
            ProgressWheel:circleColor="@color/wheel_circle_color"
            ProgressWheel:pressedCircleColor="@color/wheel_pressed_color"
            ProgressWheel:rimColor="@color/wheel_rim_color"
            ProgressWheel:rimWidth="20dp"
            ProgressWheel:spinSpeed="1dp"
            ProgressWheel:text="@string/begin_detect"
            ProgressWheel:textColor="@color/wheel_text_color"
            ProgressWheel:textSize="16sp"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/blood_pressure_check"
            android:textColor="@color/main_text_color"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/last_detect_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/last_detect_time"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/lbl_current_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_detect_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/blood_pressure_value"
        android:textColor="@color/main_text_color"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_history"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/action_1_description"
            android:src="@drawable/ic_action_1" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/action_2_description"
            android:src="@drawable/ic_action_2" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/action_3_description"
            android:src="@drawable/ic_action_3" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:background="@drawable/main_btn_bg"
        android:minHeight="48dp"
        android:text="@string/look_for_history"
        android:textColor="@color/main_text_color" />
    
    <LinearLayout
        android:id="@+id/result_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/result_bg"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="invisible" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:padding="7dp" >

            <TextView
                android:id="@+id/txt_heart_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/heart_rate"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_heart_rate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/heart_rate_value"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ADB7C1" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="7dp" >

            <TextView
                android:id="@+id/txt_systolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/systolic"
                android:textColor="@color/result_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_systolic_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/systolic_value"
                android:textColor="@color/result_text_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/result_seperate_color" >
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="7dp" >

            <TextView
                android:id="@+id/txt_diastolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/diastolic"
                android:textColor="@color/result_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_diastolic_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:text="@string/diastolic_value"
                android:textColor="@color/result_text_color"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/result_seperate_color" >
        </LinearLayout>

        <Button
            android:id="@+id/result_btn_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_btn_bg"
            android:minHeight="48dp"
            android:text="@string/look_for_history"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>